# mcp-oauth-bridge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: claud_raw.md  claude-mcp-connector.md  draft-spec-oauth.md  installation.md  openai-api.md  plan.md  publishing.md  stripe-mcp.md
mcp_oauth_bridge/: __init__.py  approvals.py  cli.py  config.py  discovery.py  oauth.py  proxy.py  tokens.py
mcp_oauth_bridge/adapters/: __init__.py  anthropic.py  openai.py
templates/: approvals.html
tests/: README.md  mock_oauth_server.py  test_oauth_flow.py
