[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-oauth-bridge"
version = "0.1.0"
description = "Local OAuth bridge for MCP servers supporting OpenAI and Anthropic APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Scott Wilcox", email = "scott@janix.ai"}
]
maintainers = [
    {name = "Scott Wilcox", email = "scott@janix.ai"}
]
keywords = ["oauth", "mcp", "openai", "anthropic", "authentication", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: FastAPI",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "cryptography>=3.4.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "build>=0.7.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=2.0.0",
]

[project.scripts]
mcp-oauth-bridge = "mcp_oauth_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/scottmsilver/mcp-oauth-bridge"
Repository = "https://github.com/scottmsilver/mcp-oauth-bridge.git"
Documentation = "https://github.com/scottmsilver/mcp-oauth-bridge#readme"
"Bug Tracker" = "https://github.com/scottmsilver/mcp-oauth-bridge/issues"
Changelog = "https://github.com/scottmsilver/mcp-oauth-bridge/releases"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 